fix: button icon alignment

--- a/src/components/next/freestanding/button/button.module.css
+++ b/src/components/next/freestanding/button/button.module.css
@@ -6,6 +6,11 @@
   align-items: center;
 }
 
+.btn-text-container {
+  display: inline-flex;
+  align-self: center;
+}
+
 .style-filled-light {
   padding: 12px 16px;
   border-radius: 100px;
